# watercrawl-py

./: CHANGELOG.md  LICENSE  README.md  examples.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/watercrawl/: __init__.py  api.py  tests.py
