[project]
name = "watercrawl-py"
version = "0.7.1"
dependencies = [
    'requests',
]
authors = [
    { name = "AmirMohsen Asaran", email = "info@watercrawl.ai" },
]
description = "This project used for calling WaterCrawl API in Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/watercrawl/watercrawl-py"
Issues = "https://github.com/watercrawl/watercrawl-py/issues"
[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

